Update Gradle config Update dependencies Minor fixes